Added more server_example tests Tweaks to openapi
